--- a/style.css
+++ b/style.css
@@ -1,5 +1,21 @@
+body {
+	margin: 0;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
+}
+
+.container {
+	display: flex;
+	flex-wrap: wrap;
+	width: 500px;
+	height: 500px;
+}
+
 .square {
-	width: 30px;
-	height: 30px;
+	width: calc(100% / 16);
+	height: calc(100% / 16);
 	background-color: black;
 }
