--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+:root{
+	--size: 16;
+}
+
 body {
 	margin: 0;
 	display: flex;
@@ -15,7 +19,7 @@ body {
 }
 
 .square {
-	width: calc(100% / 16);
-	height: calc(100% / 16);
+	width: calc(100% / var(--size));
+	height: calc(100% / var(--size));
 	background-color: black;
 }
